[package]
name = "modloadersetup"
version = "1.0.0"
edition = "2021"
description = "Installeur du ModLoader pour BROKE PROTOCOL"
authors = ["Yanis"]

# La lib ne doit PAS contenir "setup"/"install" dans son nom : sinon Windows
# (Installer Detection) force l'élévation UAC sur son test-runner et les tests
# ne peuvent plus s'exécuter. Le binaire final, lui, garde un nom "Setup".
[lib]
name = "mlkit"
path = "src/lib.rs"

[[bin]]
name = "ModLoaderSetup"
path = "src/main.rs"
# Le binaire embarque un manifest "requireAdministrator" ; son test-runner ne
# peut donc pas s'exécuter sans élévation. Les tests vivent dans la lib.
test = false

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
embed-manifest = "1.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
